2006-02-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/ChannelParser.cpp: Name is an attribute, not an element.

	* libwfut/FileParser.cpp: CRC32 is a unsigned long. Fix some parsing
	  problems.

	* libwfut/types.h: Add WFUT namespace.

	* libwfut/IO.cpp, libwfut/IO.h: Add function to create dirs if they 
	  don't exist. Sets dir perms to 0700. DownloadFailed signal now takes
	  a third string containing an error message. Added downloadFile to
	  download a single file. This function blocks until the download
	  completes or fails.

2006-02-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/types.h, libwfut/IO.h, libwfut/IO.cpp, libwfut/WFUT.cpp: Add
	  checks for CRC32 value calculation. The IO::queueFile now takes the 
	  expected CRC32 value of the downloaded file. Set to 0 to ignore the 
	  calculated CRC32 value.

2006-02-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Fix poll function so download failures are reported 
	  as such. Fix queueFile to set DataStruct as private data for the 
	  handle. The low-level file download code is now fairly complete,
	  however some work is required for better error handling.

2005-11-27  Simon Goodall  <libwfut@simongoodall.co.uk>

	* Initial ChangeLog entry.