@@ -10,13 +10,14 @@
 
 namespace WFUT {
 
-
-// Place holder function.
-std::string getFile(const std::string &url) {
-  return "";
+void msg(const std::string &u, const std::string &f)  {
+  printf("Downloaded %s  -> %s\n", u.c_str(), f.c_str());
+}
+void msg2(const std::string &u, const std::string &f, const std::string &r)  {
+  printf("Failed %s -> %s\n",u.c_str(), r.c_str());
 }
 
-int WFUT::init() {
+int WFUTClient::init() {
   assert (m_initialised == false);
 
   m_io = new IO();
@@ -26,12 +27,15 @@ int WFUT::init() {
     return 1;
   }
 
+  m_io->DownloadComplete.connect(sigc::ptr_fun(msg));
+  m_io->DownloadFailed.connect(sigc::ptr_fun(msg2));
+
   m_initialised = true;
 
   return 0;
 }
 
-int WFUT::shutdown() {
+int WFUTClient::shutdown() {
   assert (m_initialised == true);
 
   m_io->shutdown();
@@ -43,37 +47,73 @@ int WFUT::shutdown() {
   return 0;
 }
 
-void WFUT::updateChannel(const FileList &updates) {
+void WFUTClient::updateChannel(const FileList &updates,
+                               const std::string &urlPrefix,
+                               const std::string &pathPrefix) {
   assert (m_initialised == true);
   FileList::const_iterator I = updates.begin();
   while (I != updates.end()) {
-    FileObject f = *I;
+    FileObject f = *I++;
     // TODO  prepend root values
-    std::string filename = f.filename;
-    std::string url = filename;
+    std::string filename = pathPrefix + f.filename;
+    std::string url = urlPrefix + f.filename;
     m_io->queueFile(filename, url, f.crc32);
   }
 }
 
-ChannelList WFUT::getChannelList(const std::string &url) {
+ChannelList WFUTClient::getChannelList(const std::string &url) {
+  assert (m_initialised == true);
   ChannelList channels;
-  std::string fname = getFile(url);
-  if (parseChannelList(fname, channels)) {
-    // Error
+  // TODO: this is currently platform dependant!
+  char filename[] = "/tmp/wfut.XXXXXX";
+  int fd = mkstemp(filename);
+
+  if (m_io->downloadFile(filename, url, 0)) {
+    // error
+    fprintf(stderr, "Error downloading channel list\n");
+    close(fd);
+    unlink(filename);
+    return channels;
   }
+  if (parseChannelList(filename, channels)) {
+    // Error
+    fprintf(stderr, "Error parsing channel list\n");
+    close(fd);
+    unlink(filename);
+    return channels;
+  }
+  close(fd);
+  unlink(filename);
   return channels;
 }
 
-FileList WFUT::getFileList(const std::string &url) {
+FileList WFUTClient::getFileList(const std::string &url) {
+  assert (m_initialised == true);
   FileList files;
-  std::string fname = getFile(url);
-  if (parseFileList(fname, files)) {
-    // Error
+  // TODO: this is currently platform dependant!
+  char filename[] = "/tmp/wfut.XXXXXX";
+  int fd = mkstemp(filename);
+  if (m_io->downloadFile(filename, url, 0)) {
+    // error
+    fprintf(stderr, "Error downloading file list\n");
+    close(fd);
+    unlink(filename);
+    return files;
   }
+
+  if (parseFileList(filename, files)) {
+    // Error
+    fprintf(stderr, "Error parsing file list\n");
+    close(fd);
+    unlink(filename);
+  }
+  close(fd);
+  unlink(filename);
   return files;
 }
 
-FileList WFUT::getLocalList(const std::string &filename) {
+FileList WFUTClient::getLocalList(const std::string &filename) {
+  assert (m_initialised == true);
   FileList files;
   if (parseFileList(filename, files)) {
     // Error
@@ -81,11 +121,17 @@ FileList WFUT::getLocalList(const std::string &filename) {
   return files;
 }
 
-int WFUT::saveLocalList(const FileList &files, const std::string &filename) {
+int WFUTClient::saveLocalList(const FileList &files, const std::string &filename) {
+  assert (m_initialised == true);
   if (writeFileList(filename, files)) {
     // Error
   }
   return 0;
+}
+
+int WFUTClient::poll() {
+  assert (m_initialised == true);
+  return m_io->poll();
 }
 
 }
